# background_vt_encode

./: .gitignore  Dockerfile  README.md  bg_encode.sh  encode.py  pyproject.toml
.github/workflows/: build_image.yml
lib/: handbrake.py  pipeline.py  probe.py  proc.py  rclone.py
