[tool.pyright]
strict = [ "**/*.py" ]

[tool.poetry]
name = "background_vt_encode"
version = "0.1.0"
description = ""
authors = ["Jono Hill <jono@hillnz.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
